2002-09-26  Anders Carlsson  <andersca@gnu.org>

	* bootstrap.py:
	* pkgconfig-0.13-include.patch:
	Use pkg-config 0.13 and add an include fix.
	
2002-09-18  Will LaShell <will@lashell.net>

	* cvs.py: adding the -dP arguement to cvs update 

2002-09-18  Havoc Pennington  <hp@pobox.com>

	* moduleinfo.py (gnome2): use gconf-1-2 branch for gnome20, 
	add gconf HEAD to gnome22

2002-09-17  Havoc Pennington  <hp@redhat.com>

	* moduleinfo.py (gnome2): pull gnome-2-0 branch of libwnck

Mon Sep 16 15:12:31 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (gnome2): add '-- ' to gstreamers autogen.sh to
	pass args on to configure.  This still doesn't work with
	--maintainer-mode etc., but people can fix that on their own.

2002-09-16  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22): s/profterm/gnome-terminal/
	(gnome22): add gnome-2-0 branch for libglade.

Thu Sep 12 19:10:35 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (gnome2): libmrproject requires libgsf

Thu Sep 12 19:08:58 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py: s/monkey-sound/monkey-media/g

2002-09-10  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome2): get mrproject from GNOME CVS now (patch
	from Xavier Ordoquy.

2002-09-09  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome2): updates from Will Lashell (bug #92581).

2002-09-06  Havoc Pennington  <hp@pobox.com>

	* moduleinfo.py (gnome2): add right branch for gail

Thu Sep  5 15:28:35 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (gnome-build): Require gtkhtml2 as well.

2002-08-18  Anders Carlsson  <andersca@gnu.org>

	* bootstrap.py (bootstraps): Fetch automake-1.4 as well as
	automake-1.6.

2002-07-24  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome-control-center): set to gnome-2-0 branch
	for gnome20 module set (and head for gnome22).
	(anjuta2): depends on libzvt (from bug #87661).

2002-07-14  Havoc Pennington  <hp@pobox.com>
