@@ -1,3 +1,8 @@
+2002-09-26  Bastien Nocera  <hadess@hadess.net>
+
+	* moduleinfo.py: update gnome-common branches (hope I'm not breaking
+	anything...)
+
 2002-09-26  Anders Carlsson  <andersca@gnu.org>
 
 	* bootstrap.py:
